@@ -4,6 +4,8 @@
 
 == raabro 1.0.4  not yet released
 
+- provide a default .rewrite implementation
+
 
 == raabro 1.0.3  released 2015-09-23
 
